# mono_3d_localizer

./: README.md
docker/: Dockerfile  Dockerfile.kinetic  README.md  build_mac.sh  run.sh  run_mac.sh
docs/kitti/: my_localization.launch  my_map.launch  ndt_matching.launch  tf.launch
ros/: .gitignore  KITTI00-02.yml  KITTI00.yml  KITTI03.yml  KITTI04-12.yaml  all_run.launch  default.yml  orb.yml
ros/src/computing/perception/localization/lib/icp_7dof/: CHANGELOG.rst  CMakeLists.txt  _CMakeLists.txt  package.xml
ros/src/computing/perception/localization/lib/icp_7dof/dummy/include/icp_7dof/: icp_7dof.h  icp_7dof_transform.h  icp_7dof_transform_lm.h  registration_7dof.h
ros/src/computing/perception/localization/lib/icp_7dof/dummy/include/icp_7dof/impl/: icp_7dof.hpp
ros/src/computing/perception/localization/lib/icp_7dof/dummy/src/: icp_7dof.cpp  icp_7dof_transform_lm.cpp
ros/src/computing/perception/localization/lib/icp_7dof/include/icp_7dof/: NormalDistributionsTransform.h  Octree.h  Registration.h  SymmetricEigenSolver.h  VoxelGrid.h  debug.h  icp_7dof.h  icp_7dof_correspondence_estimation.h  icp_7dof_transform.h  icp_7dof_transform_lm.h  icp_transform.h  normal_distributions_transform.h  registration.h  registration_7dof.h  voxel_grid.h  warp_point_nonrigid_7d.h
ros/src/computing/perception/localization/lib/icp_7dof/include/icp_7dof/impl/: icp_7dof.hpp  icp_7dof_transform_lm.hpp  registration_7dof.hpp
ros/src/computing/perception/localization/lib/icp_7dof/src/: NormalDistributionsTransform.cpp  Octree.cpp  Registration.cpp  VoxelGrid.cpp  _icp_7dof.cpp  _icp_7dof_transform_lm.cpp  icp_7dof.cpp  icp_7dof_correspondence_estimation.cpp  icp_7dof_transform_lm.cpp  normal_distributions_transform.cpp  normal_distributions_transform_7.cpp  registration.cpp  voxel_grid.cpp
ros/src/computing/perception/localization/lib/ndt_7dof/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/src/computing/perception/localization/lib/ndt_7dof/include/ndt_7dof/: NormalDistributionsTransform.h  Octree.h  Registration.h  SymmetricEigenSolver.h  VoxelGrid.h  debug.h
ros/src/computing/perception/localization/lib/ndt_7dof/src/: NormalDistributionsTransform.cpp  Octree.cpp  Registration.cpp  VoxelGrid.cpp
ros/src/computing/perception/localization/lib/ndt_cpu/src/: NormalDistributionsTransform.cpp
